# Autonomous-Mecanum-Robot-Simulation-and-Mapping

./: .gitignore  LICENSE  README.md  a.txt  cafe_world_map.pgm  cafe_world_map.yaml  demo_commands.md
src/autobot/: CMakeLists.txt  package.xml
src/autobot_bringup/: CMakeLists.txt  package.xml
src/autobot_bringup/launch/: autobot_navigation.launch.py  load_ros2_controllers.launch.py
src/autobot_description/: CMakeLists.txt  package.xml
src/autobot_description/launch/: robot_state_publisher.launch.py
src/autobot_description/meshes/: config.json  robot.urdf
src/autobot_description/rviz/: autobot_description.rviz
src/autobot_description/urdf/: autobot.urdf.xacro
src/autobot_docking/: CMakeLists.txt  package.xml
src/autobot_docking/config/: apriltags_36h11.yaml  dock_database.yaml
src/autobot_docking/launch/: apriltag_dock_pose_publisher.launch.py
src/autobot_docking/src/: detected_dock_pose_publisher.cpp
src/autobot_gazebo/: CMakeLists.txt  package.xml
src/autobot_gazebo/config/: ros_gz_bridge.yaml
src/autobot_gazebo/launch/: autobot.gazebo.launch.py
src/autobot_gazebo/rviz/: autobot_gazebo.rviz
src/autobot_gazebo/worlds/: cafe.world  empty.world  house.world  new.world  pick_and_place_demo.world
src/autobot_localization/: CMakeLists.txt  package.xml
src/autobot_localization/launch/: ekf_gazebo.launch.py
src/autobot_msgs/: CMakeLists.txt  package.xml
src/autobot_navigation/: CMakeLists.txt  package.xml
src/autobot_navigation/autobot_navigation/: posestamped_msg_generator.py
src/mecanum_drive_controller/: package.xml
(+29 files in other folders)
