<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autobot_docking</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hitesh164722@gmail.com">hitesh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>apriltag_ros</depend>
  <depend>apriltag_msgs</depend>
  <depend>image_proc</depend>
  <depend>image_view</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>nav2_simple_commander</depend>
  <depend>tf2_ros</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>